# MNETAPE

./: .gitignore  README.md  pyproject.toml
src/mnetape/: __init__.py  app.py
src/mnetape/actions/: README.md  __init__.py  base.py  introspect.py  registry.py
src/mnetape/actions/average_epochs/: __init__.py  action.py  templates.py  widgets.py
src/mnetape/actions/crop/: __init__.py  action.py  templates.py  widgets.py
src/mnetape/actions/custom/: __init__.py  action.py
src/mnetape/actions/detect_events/: action.py  templates.py  widgets.py
src/mnetape/actions/drop_bad_epochs/: __init__.py  action.py  templates.py  widgets.py
src/mnetape/actions/drop_channels/: __init__.py  action.py  templates.py  widgets.py
src/mnetape/actions/epoch_events/: __init__.py  action.py  templates.py  widgets.py
src/mnetape/actions/epoch_fixed/: __init__.py  action.py  templates.py
src/mnetape/actions/filter/: __init__.py  action.py  templates.py
src/mnetape/actions/ica/: __init__.py  action.py  templates.py  widgets.py
src/mnetape/actions/ica_apply/: __init__.py  action.py  classify.py  templates.py  widgets.py
src/mnetape/actions/ica_classify/: __init__.py  action.py  templates.py
src/mnetape/actions/ica_fit/: __init__.py  action.py  templates.py
src/mnetape/actions/interpolate/: __init__.py  action.py  templates.py
src/mnetape/actions/load_file/: action.py
src/mnetape/actions/normalize/: action.py  templates.py
src/mnetape/actions/notch/: __init__.py  action.py  templates.py
src/mnetape/actions/reference/: __init__.py  action.py  templates.py
src/mnetape/actions/resample/: __init__.py  action.py  templates.py
src/mnetape/actions/set_annotations/: __init__.py  action.py  templates.py  widgets.py
src/mnetape/actions/set_channel_types/: __init__.py  action.py  templates.py  widgets.py
src/mnetape/actions/set_montage/: action.py  templates.py  widgets.py
src/mnetape/core/: README.md  __init__.py  ast_utils.py  codegen.py  data_io.py  data_store.py  executor.py  logging_config.py  models.py  project.py  qc_report.py
src/mnetape/gui/: README.md  app.py  gtk_compat.py  main_window.py  utils.py
(+36 files in other folders)
