[project]
name = "mnetape"
version = "0.1.0"
description = "A graphical EEG preprocessing tool"
requires-python = ">=3.12"

dependencies = [
    "numpy",
    "matplotlib",
    "mne",
    "mne-icalabel",
    "onnxruntime",
    "python-picard>=0.8.1",
    "pygobject",
    "pyyaml>=6.0.3",
    "pyprep",
    "autoreject",
    "pandas>=3.0.1",
    "defusedxml>=0.7.1",
    "pygobject-stubs>=2.16.0",
]

[project.scripts]
mnetape = "mnetape.gui.app:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
]

[tool.uv]
package = true

[tool.ruff.lint.per-file-ignores]
# app.py calls gi.require_version() and matplotlib.use() before their respective
# gi.repository and matplotlib.pyplot imports. This ordering is a hard requirement
# for GTK/matplotlib initialisation and cannot be resolved within the file.
"src/mnetape/gui/app.py" = ["E402"]
